Bug 37197 - switching a bar chart to a pie chart does not erase a curve fitted to the data
Summary: switching a bar chart to a pie chart does not erase a curve fitted to the data
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: Other Linux (All)
: medium minor
Assignee: Katarina Behrens
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-14 05:45 UTC by Katarina Behrens
Modified: 2012-04-05 07:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot showing the inappropriate description (100.21 KB, image/png)
2011-05-14 05:45 UTC, Katarina Behrens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Katarina Behrens 2011-05-14 05:45:51 UTC
Created attachment 46706 [details]
screenshot showing the inappropriate description

1. You insert a bar chart into a text document
2. You add a curve fitting to the data with the context menu
3. You convert the bar chart into a pie chart

The legend describing the fitted curve stays in the description of the chart even though the curve itself goes away.
Comment 1 Björn Michaelsen 2011-12-23 12:05:11 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 2 Katarina Behrens 2012-02-20 01:12:03 UTC
aye, still there
Comment 3 Not Assigned 2012-03-04 14:39:14 UTC
Katarina Machalkova committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=05a0b08606ac77cf7d3e294998138610b53b1b6d

fdo#37197: No legend entry for regression curve if not applicable
Comment 4 Thorsten Behrens (allotropia) 2012-03-04 15:30:11 UTC
(In reply to comment #3)
> fdo#37197: No legend entry for regression curve if not applicable
>
Which makes this fixed on master.
Comment 5 Rainer Bielefeld Retired 2012-04-05 07:52:40 UTC
I added Fix submitter as assignee because this will ease queries and bug tracking.