fdo#37197: No legend entry for regression curve if not applicable

make the original check more general, to cover all chart types that
don't support statistics